# DeviceInput-TouchPortal-Plugin

./: .gitignore  .gitmodules  CHANGELOG.md  README.md
src/: CMakeLists.txt  Logger.cpp  Logger.h  Plugin.cpp  Plugin.h  RunGuard.h  logging.h  main.cpp  strings.h  utils.h  version.h.in
src/device/: DeviceDescriptor.h  DeviceManager.cpp  DeviceManager.h  IApiManager.h  InputDevice.cpp  InputDevice.h  SDLManager.cpp  SDLManager.h  WindowsDeviceManager.cpp  WindowsDeviceManager.h  devices.h  events.h
src/lib/TPClientQt/: CMakeLists.txt  TPClientQt.cpp  TPClientQt.h
